# ots

./: .dockerignore  .editorconfig  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.local  Jenkinsfile  Makefile  README.md  docker-compose.yaml  package.json  renovate.json
.github/workflows/: build.yml  deployment.yml  pr-checks.yml
.husky/: prepare-commit-msg
backend/: .env-example  .env.docker  .env.example  .gitignore  .hlint.yaml  .lintstagedrc.json  .stylish-haskell.yaml  Cargo.toml  Cross.toml  Makefile  README.md  Rocket.toml  build.rs  package.yaml  rust-toolchain.toml  stack.yaml
backend/features/slack/: Cargo.toml
backend/features/slack/src/: auth.rs  client.rs  lib.rs  member.rs  routes.rs
backend/features/slack/src/services/: slack_authentication_service.rs
backend/lib/store/: Cargo.toml
backend/lib/store/src/: lib.rs  redis_store.rs
backend/lib/utils/: Cargo.toml
backend/lib/utils/src/: cors.rs  global_options.rs  lib.rs  versioning.rs
backend/scripts/hlint/: hlint  install-hlint
backend/scripts/watch/: watch-and-build.sh  watch.sh
backend/src/: CommandLineOptions.hs  Logger.hs  Main.hs  main.rs
backend/src/SecretManager/: API.hs  Store.hs
backend/src/StoreManager/: RedisStore.hs
backend/src/app/: mod.rs  secrets.rs
backend/src/integrations/: mod.rs
backend/src/integrations/slack/: auth.rs  client.rs  member.rs  mod.rs  routes.rs
backend/src/integrations/slack/services/: mod.rs  slack_authentication_service.rs
backend/src/store/: redis_store.rs
backend/src/utils/: logger.rs  mod.rs  time.rs  uuid.rs
cli/: Cargo.toml  go.mod  main.go
cli/api/: api.go  api_test.go
docs/: book.toml
frontend/: .env.docker  .env.example  .eslintrc.cjs  .lintstagedrc.json  .prettierrc.cjs  README.md  index.html  package.json  stylelint.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
scripts/: cli_create.sh
server_ssl/: generate-ssl.sh
(+81 files in other folders)
