[package]
name = "ots_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
redis = { version = "0.21" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["v4"] }
envconfig = { version = "0.10" }
