[package]
name = "ots_server"
build = "build.rs"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack = { path = "./features/slack", optional = true }
utils = { workspace = true }
store = { workspace = true }
rocket = { workspace = true }
serde = { workspace = true }
envconfig = { workspace = true }

[build-dependencies]
dotenvy = { version = "0.15.7" }

[workspace]
members = ["features/*", "lib/*"]

[workspace.dependencies]
store = { path = "./lib/store" }
utils = { path = "./lib/utils" }
rocket = { version = "0.5.0", features = ["secrets", "json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
envconfig = { version = "0.10" }


[features]
slack_feature = ["slack"]
